--- a/app.json
+++ b/app.json
@@ -31,6 +31,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "b1f081ee-cac7-422a-ad45-294cb67e01e2"
+      }
+    },
+    "owner": "ktown5422"
   }
 }
